--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 .container {
   margin: auto;
   margin-top: 4rem;
+  margin-bottom: 4rem;
   width: 300px;
   height: 430px;
   text-align: center;
