--- a/style.css
+++ b/style.css
@@ -18,9 +18,10 @@ body {
   text-align: center;
   background-color: #333;
   border-radius: 10px;
+  position: relative;
 }
 .container input[type="text"] {
-  width: 90%;
+  width: 86%;
   height: var(--hight);
   font-size: 30px;
   margin-top: 15px;
@@ -32,10 +33,11 @@ body {
   margin: auto;
   height: var(--hight);
   padding: 5px 0;
+  position: relative;
 }
 .row button {
   display: inline-block;
-  width: calc(90% / 4 + 1.3%);
+  width: calc(90% / 4);
   height: var(--hight);
   padding: 0.85rem;
   font-size: 1.65rem;
@@ -44,7 +46,7 @@ body {
   cursor: pointer;
 }
 .row button#equal {
-  width: calc(90% / 2 + 2.6%);
+  width: calc(90% / 2 + 2.2%);
   background-color: crimson;
 }
 .container button:not(.num):not(.op) {
